# authors-demo-api

./: register.py
app/: go.mod
my-app/: deploy.sh  main.go
my-app.golang/: deploy.sh  go.mod  go.sum  main.go
my-app.python/: Dockerfile  Dockerfile.misc  Procfile  common.py  deploy.sh  main.py  pyproject.toml  requirements.txt
my-app.python/routers/: author.py  root.py
utils/: pyproject.toml  register.py  requirements.txt  test-client.sh
utils/backup-tests/: register-datastore.py  search.py
